# waypoints

./: .gitignore  README.md  assignment.md
backend/: .env  docker-compose.yml
backend/api/: Dockerfile  pyproject.toml  setup.cfg  wait-for-postgres.sh
backend/api/src/: convert.py  crud.py  db.py  main.py  models.py  recreate_tables.py  schemas.py
backend/api/src/tests/: test__schemas.py  test_convert.py
frontend/: .env  .eslintrc.js  .eslintrc.json  .stylelintrc  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: config.ts  index.tsx
frontend/src/api/: waypoints.ts
frontend/src/components/: App.scss  App.tsx  Map.tsx  MarkerPopup.scss  MarkerPopup.tsx  Sidebar.scss  Sidebar.tsx  WaypointItem.scss  WaypointItem.tsx
frontend/src/map/: InfoBox.scss  InfoBox.ts  WaypointMarker.ts  map.scss  map.ts
frontend/src/models/: waypoint.ts
frontend/src/styles/: colors.scss  fonts.scss  global.scss  grid.scss
frontend/src/utils/: convert.test.ts  convert.ts  http.ts  list.test.ts  list.ts
