[tool.poetry]
name = "waypoints-backend-api"
version = "0.0.0"
description = ""
authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
uvicorn = "0.17.5"
fastapi = "0.74.0"
pg8000 = "1.24.0"
SQLAlchemy = "1.4.31"
GeoAlchemy2 = "0.10.2"

[tool.poetry.dev-dependencies]
pycodestyle = "2.8.0"
pytest = "7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
